        PR 10169         * gas/tc-arm.c (do_t_ssat): Move common code from here...         (do_t_usat): ... and here to...         (do_t_ssat_usat): New function: ... here.  Add code to check that         the shift value, if present, is in range.

* gas/arm/thumb2_bad_reg.s: Add tests for SSAT and USAT with an
        out of range shift.
        * gas/arm/thumb2_bad_reg.l: Update expected error messages.