gas/testsuite/gas/arm/thumb2_bad_reg.s
@@ -630,6 +630,7 @@ test:
 	ssat r15, #1, r0
 	ssat r0, #1, r13
 	ssat r0, #1, r15
+	ssat r1, #1, r3,asr #32
 	@ SSAT16
 	ssat16 r13, #1, r0
 	ssat16 r15, #1, r0
@@ -909,6 +910,7 @@ test:
 	usat r15, #1, r0
 	usat r0, #1, r13
 	usat r0, #1, r15
+	usat r1, #1, r3,asr #32
 	@ USAT16
 	usat16 r13, #1, r0
 	usat16 r15, #1, r0
